--- a/cmri-osp-lab/192-168-246-151.md
+++ b/cmri-osp-lab/192-168-246-151.md
@@ -1,5 +1,7 @@
 # 环境3
 
+![Matterhorn](./images/Matterhorn.jpeg)
+
 ## 硬件类型
 IBM
 
@@ -22,7 +24,7 @@ OSP10
 |:--:|:------:|
 |gelara|无法启动Waiting on node <overcloud-controller-2> to report database status before Master instances can start
 
-
+```
 [root@overcloud-controller-0 mysql]# cat grastate.dat 
 # GALERA saved state
 version: 2.1
@@ -36,6 +38,7 @@ version: 2.1
 uuid:    615689d7-4b5d-11e7-9da8-43c66376b9d0
 seqno:   128048352
 cert_index:
+```
 
 手工bootstrap
 https://access.redhat.com/articles/2332651
