--- a/cmri-osp-lab/192-168-246-151.md
+++ b/cmri-osp-lab/192-168-246-151.md
@@ -43,3 +43,29 @@ cert_index:
 手工bootstrap
 https://access.redhat.com/articles/2332651
 
+```
+[root@overcloud-controller-0 ~]# pcs resource show galera-master 
+ Master: galera-master
+  Meta Attrs: ordered=true master-max=3 is-managed=false 
+  Resource: galera (class=ocf provider=heartbeat type=galera)
+   Attributes: additional_parameters=--open-files-limit=16384 enable_creation=true wsrep_cluster_address=gcomm://overcloud-controller-0,overcloud-controller-1,overcloud-controller-2
+   Operations: start interval=0s timeout=120 (galera-start-interval-0s)
+               stop interval=0s timeout=120 (galera-stop-interval-0s)
+               monitor interval=20 timeout=30 (galera-monitor-interval-20)
+               monitor interval=10 role=Master timeout=30 (galera-monitor-interval-10)
+               monitor interval=30 role=Slave timeout=30 (galera-monitor-interval-30)
+               demote interval=0s timeout=120 (galera-demote-interval-0s)
+               promote interval=0s on-fail=block timeout=300s (galera-promote-interval-0s)
+
+crm_attribute -N overcloud-controller-0 -l reboot --name galera-last-committed -Q
+crm_attribute -N overcloud-controller-0 -l reboot --name galera-bootstrap -v true
+crm_attribute -N overcloud-controller-0 -l reboot --name master-galera -v 100
+crm_resource --force-promote -r galera -V
+pcs resource cleanup galera
+pcs resource enable galera
+pcs resource manage galera
+```
+
+### overcloud 恢复情况
+控制节点已恢复，overcloud api已可访问，计算节点服务异常
+
